Melhorias diversas de comandos (#8)
- Melhoria da sugestão de comandos
- Melhorias diversas nos comandos de party
- Melhoria da classe CommandUtils
- Removido método CommandUtils#noConsoleUsage
- Melhoria do enum ShareMode
- Removido ImmutableList e StringUtil
- Alterado tipo de Locale
- Removido necesssidade de senha
- Pequenas melhorias
- Melhoria de métodos relacionados ao ShareMode
- Melhoria do /party info
- Resolvido problema com comando /party itemshare
- Melhorando sistema de guia de habilidades