@@ -6,12 +6,10 @@ import com.gmail.nossr50.database.DatabaseManagerFactory;
 import com.gmail.nossr50.datatypes.database.DatabaseType;
 import com.gmail.nossr50.datatypes.experience.FormulaType;
 import com.gmail.nossr50.mcMMO;
-import com.google.common.collect.ImmutableList;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
-import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
@@ -21,7 +19,7 @@ import java.util.List;
 public class McconvertCommand implements TabExecutor {
     private static final List<String> FORMULA_TYPES;
     private static final List<String> DATABASE_TYPES;
-    private static final List<String> SUBCOMMANDS = ImmutableList.of("database", "experience");
+    private static final List<String> SUBCOMMANDS = List.of("database", "experience");
 
     private final CommandExecutor databaseConvertCommand = new ConvertDatabaseCommand();
     private final CommandExecutor experienceConvertCommand = new ConvertExperienceCommand();
@@ -48,8 +46,8 @@ public class McconvertCommand implements TabExecutor {
         Collections.sort(formulaTypes);
         Collections.sort(databaseTypes);
 
-        FORMULA_TYPES = ImmutableList.copyOf(formulaTypes);
-        DATABASE_TYPES = ImmutableList.copyOf(databaseTypes);
+        FORMULA_TYPES = List.copyOf(formulaTypes);
+        DATABASE_TYPES = List.copyOf(databaseTypes);
 
     }
 
@@ -70,20 +68,23 @@ public class McconvertCommand implements TabExecutor {
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         switch (args.length) {
-            case 1:
-                return StringUtil.copyPartialMatches(args[0], SUBCOMMANDS, new ArrayList<>(SUBCOMMANDS.size()));
-            case 2:
+            case 1 -> {
+                return SUBCOMMANDS.stream().filter(s -> s.startsWith(args[0])).toList();
+            }
+            case 2 -> {
                 if (args[0].equalsIgnoreCase("database") || args[0].equalsIgnoreCase("db")) {
-                    return StringUtil.copyPartialMatches(args[0], DATABASE_TYPES, new ArrayList<>(DATABASE_TYPES.size()));
+                    return DATABASE_TYPES.stream().filter(s -> s.startsWith(args[1])).toList();
                 }
 
                 if (args[0].equalsIgnoreCase("experience") || args[0].equalsIgnoreCase("xp") || args[0].equalsIgnoreCase("exp")) {
-                    return StringUtil.copyPartialMatches(args[0], FORMULA_TYPES, new ArrayList<>(FORMULA_TYPES.size()));
+                    return FORMULA_TYPES.stream().filter(s -> s.startsWith(args[1])).toList();
                 }
 
-                return ImmutableList.of();
-            default:
-                return ImmutableList.of();
+                return List.of();
+            }
+            default -> {
+                return List.of();
+            }
         }
     }
 }
